fix rendering gap issues by switching to flexbox instead of grid on page comp

--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -1,6 +1,6 @@
 .page-grid{
   display:grid;
-  grid-template-columns:250px 1fr;
+  grid-template-columns:20vw 75vw;
   // grid-template-rows: 1fr 350px 400px;
 }
 
