--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -1,5 +1,1 @@
-.grid{
-  display:grid;
-  grid-template-columns: repeat(4,20%);
-  grid-gap: 5%;
-}
+
