--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,3 +1,7 @@
 img{
-  width:100px;
+  width:100%;
+}
+
+.product{
+  width:20vw;
 }
