--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,10 @@ width:100%;
           justify-content: space-between;
 }
 
+.wrap{
+  -ms-flex-wrap:wrap;
+      flex-wrap:wrap;
+}
 .collection{
   width:45vw;
   display:-webkit-box;
